--- a/templates/chat.html
+++ b/templates/chat.html
@@ -33,10 +33,10 @@
     <link rel="stylesheet" href="/static/css/chat.css">
 
     <!--jQUery-->
-    <src src="/static/js/jquery.js"></src>
+    <script src="/static/js/jquery.js"></script>
 
     <!--Custom JS-->
-    <src src="/static/js/chat.js"></src>
+    <script src="/static/js/chat.js"></script>
 
 </head>
 <body>
@@ -74,7 +74,129 @@
     </header>
 
     <main>
-       
+        <section id="chat-container">
+            <div class="container py-5">
+          
+              <div class="row">
+                <div class="col-md-12">
+          
+                  <div class="card" id="chat3">
+                    <div class="card-body">
+          
+                      <div class="row">
+                        <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0">
+          
+                          <div class="p-3">
+          
+                            <div id="bot-list">
+                              <ul class="list-unstyled mb-0">
+                                <li id="salina-shower" class="p-2 border-bottom">
+                                  <a href="" class="d-flex justify-content-between">
+                                    <div class="d-flex flex-row">
+                                      <div>
+                                        <img
+                                          src="/static/img/salina-profile-pic.png"
+                                          alt="Salina Avatar" class="rounded-circle d-flex align-self-center me-3" width="60">
+                                        <span class="badge bg-success badge-dot"></span>
+                                      </div>
+                                      <div class="pt-1">
+                                        <p class="fw-bold mb-0">Salina</p>
+                                        <p class="small text-muted"></p>
+                                      </div>
+                                    </div>
+                                    <div class="pt-1">
+                                      <p class="small text-muted mb-1">Awaiting</p>
+                                      <span class="badge bg-danger rounded-pill float-end">1</span>
+                                    </div>
+                                  </a>
+                                </li>
+                                <li id="jung-kook-shower" class="p-2 border-bottom">
+                                  <a href="" class="d-flex justify-content-between">
+                                    <div class="d-flex flex-row">
+                                      <div>
+                                        <img
+                                          src="/static/img/jungkook.jpeg"
+                                          alt="Jung Kook Avatar" class="rounded-circle d-flex align-self-center me-3" width="60">
+                                        <span class="badge bg-success badge-dot"></span>
+                                      </div>
+                                      <div class="pt-1">
+                                        <p class="fw-bold mb-0">Jung Kook</p>
+                                        <p class="small text-muted"></p>
+                                      </div>
+                                    </div>
+                                    <div class="pt-1">
+                                      <p class="small text-muted mb-1">Writing</p>
+                                      <span class="badge bg-danger rounded-pill float-end">1</span>
+                                    </div>
+                                  </a>
+                                </li>
+                                <li id="dog-bot-shower" class="p-2 border-bottom">
+                                  <a href="" class="d-flex justify-content-between">
+                                    <div class="d-flex flex-row">
+                                      <div>
+                                        <img
+                                          src="/static/img/dog-bot.jpeg"
+                                          alt="avatar" class="rounded-circle d-flex align-self-center me-3" width="60">
+                                        <span class="badge bg-success badge-dot"></span>
+                                      </div>
+                                      <div class="pt-1">
+                                        <p class="fw-bold mb-0">Dog Bot</p>
+                                        <p class="small text-muted"></p>
+                                      </div>
+                                    </div>
+                                    <div class="pt-1">
+                                      <p class="small text-muted mb-1">Responded</p>
+                                      <span class="badge bg-danger rounded-pill float-end">1</span>
+                                    </div>
+                                  </a>
+                                </li>
+                              </ul>
+                            </div>
+          
+                          </div>
+          
+                        </div>
+          
+                        <div class="col-md-6 col-lg-7 col-xl-8">
+          
+                          <div id="chat-container" class="vscroll pt-3 pe-3">
+          
+                            <div class="user-msg d-flex flex-row justify-content-start">
+                              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
+                                alt="avatar 1">
+                              <div>
+                                <p class="small p-2 ms-3 mb-1 rounded-3">Hello there.</p>
+                              </div>
+                            </div>
+          
+                            <div class="bot-msg d-flex flex-row justify-content-end">
+                              <div>
+                                <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">Hello, how are you doing?</p>
+                              </div>
+                              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                                alt="avatar 1">
+                            </div>
+                          </div>
+
+                          <div id="user-msg-container" class="d-flex flex-row justify-content-end align-items-center text-muted pe-3 pt-3 mt-2">
+                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
+                              alt="avatar 3">
+                            <input type="text" class="form-control form-control-lg" id="exampleFormControlInput2"
+                              placeholder="Type message">
+                            <a class="ms-3" href=""><i class="fas fa-paper-plane"></i></a>
+                        </div>
+          
+                        </div>
+                      </div>
+          
+                    </div>
+                  </div>
+          
+                </div>
+              </div>
+          
+            </div>
+        </section>
     </main>
     
     <!--Body Scripts-->
