--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,10 @@
     <link rel="stylesheet" href="/static/css/style.css">
 
     <!--jQUery-->
-    <src src="/static/js/jquery.js"></src>
+    <script src="/static/js/jquery.js"></script>
 
     <!--Custom JS-->
-    <src src="/static/js/index.js"></src>
+    <script src="/static/js/index.js"></script>
 
 </head>
 <body>
