Bare Bones for Chat Page

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -183,7 +183,7 @@
                               alt="avatar 3">
                             <input type="text" class="form-control form-control-lg" id="exampleFormControlInput2"
                               placeholder="Type message">
-                            <a class="ms-3" href=""><i class="fas fa-paper-plane"></i></a>
+                            <a id="user-submit-msg" class="ms-3" href=""><i class="fas fa-paper-plane"></i></a>
                         </div>
           
                         </div>
