--- a/templates/chat.html
+++ b/templates/chat.html
@@ -89,24 +89,24 @@
                           <div class="p-3">
           
                             <div id="bot-list">
-                              <ul class="list-unstyled mb-0">
+                              <ul id="bot-real-list" class="list-unstyled mb-0">
                                 <li id="salina-shower" class="p-2 border-bottom">
                                   <a href="" class="d-flex justify-content-between">
                                     <div class="d-flex flex-row">
                                       <div>
                                         <img
                                           src="/static/img/salina-profile-pic.png"
-                                          alt="Salina Avatar" class="rounded-circle d-flex align-self-center me-3" width="60">
+                                          alt="Salina Avatar" class="bot-pic rounded-circle d-flex align-self-center me-3" width="60">
                                         <span class="badge bg-success badge-dot"></span>
                                       </div>
                                       <div class="pt-1">
-                                        <p class="fw-bold mb-0">Salina</p>
-                                        <p class="small text-muted"></p>
+                                        <p class="fw-bold mb-0 bot-name">Salina</p>
+                                        <p class="small text-muted bot-msg-preview"></p>
                                       </div>
                                     </div>
                                     <div class="pt-1">
-                                      <p class="small text-muted mb-1">Awaiting</p>
-                                      <span class="badge bg-danger rounded-pill float-end">1</span>
+                                      <p class="small text-muted mb-1 bot-chat-status"></p>
+                                      <span class="badge bg-danger rounded-pill float-end bot-responses">1</span>
                                     </div>
                                   </a>
                                 </li>
@@ -116,17 +116,17 @@
                                       <div>
                                         <img
                                           src="/static/img/jungkook.jpeg"
-                                          alt="Jung Kook Avatar" class="rounded-circle d-flex align-self-center me-3" width="60">
+                                          alt="Jung Kook Avatar" class="bot-pic rounded-circle d-flex align-self-center me-3" width="60">
                                         <span class="badge bg-success badge-dot"></span>
                                       </div>
                                       <div class="pt-1">
-                                        <p class="fw-bold mb-0">Jung Kook</p>
-                                        <p class="small text-muted"></p>
+                                        <p class="fw-bold mb-0 bot-name">Jung Kook</p>
+                                        <p class="small text-muted bot-msg-preview"></p>
                                       </div>
                                     </div>
                                     <div class="pt-1">
-                                      <p class="small text-muted mb-1">Writing</p>
-                                      <span class="badge bg-danger rounded-pill float-end">1</span>
+                                      <p class="small text-muted mb-1 bot-chat-status"></p>
+                                      <span class="badge bg-danger rounded-pill float-end bot-responses">1</span>
                                     </div>
                                   </a>
                                 </li>
@@ -136,17 +136,17 @@
                                       <div>
                                         <img
                                           src="/static/img/dog-bot.jpeg"
-                                          alt="avatar" class="rounded-circle d-flex align-self-center me-3" width="60">
+                                          alt="avatar" class="bot-pic rounded-circle d-flex align-self-center me-3" width="60">
                                         <span class="badge bg-success badge-dot"></span>
                                       </div>
                                       <div class="pt-1">
-                                        <p class="fw-bold mb-0">Dog Bot</p>
-                                        <p class="small text-muted"></p>
+                                        <p class="fw-bold mb-0 bot-name">Dog Bot</p>
+                                        <p class="small text-muted bot-msg-preview"></p>
                                       </div>
                                     </div>
                                     <div class="pt-1">
-                                      <p class="small text-muted mb-1">Responded</p>
-                                      <span class="badge bg-danger rounded-pill float-end">1</span>
+                                      <p class="small text-muted mb-1 bot-chat-status"></p>
+                                      <span class="badge bg-danger rounded-pill float-end bot-responses">1</span>
                                     </div>
                                   </a>
                                 </li>
@@ -159,21 +159,21 @@
           
                         <div class="col-md-6 col-lg-7 col-xl-8">
           
-                          <div id="chat-container" class="vscroll pt-3 pe-3">
+                          <div id="chat-real-container" class="vscroll pt-3 pe-3">
           
                             <div class="user-msg d-flex flex-row justify-content-start">
                               <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
                                 alt="avatar 1">
                               <div>
-                                <p class="small p-2 ms-3 mb-1 rounded-3">Hello there.</p>
+                                <p class="small p-2 ms-3 mb-1 rounded-3 user-real-msg">Hello there.</p>
                               </div>
                             </div>
           
                             <div class="bot-msg d-flex flex-row justify-content-end">
                               <div>
-                                <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary">Hello, how are you doing?</p>
+                                <p class="small p-2 me-3 mb-1 text-white rounded-3 bg-primary bot-real-msg">Hello, how are you doing?</p>
                               </div>
-                              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                              <img class="bot-chat-pic" src="/static/img/salina-profile-pic.png"
                                 alt="avatar 1">
                             </div>
                           </div>
@@ -181,7 +181,7 @@
                           <div id="user-msg-container" class="d-flex flex-row justify-content-end align-items-center text-muted pe-3 pt-3 mt-2">
                             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
                               alt="avatar 3">
-                            <input type="text" class="form-control form-control-lg" id="exampleFormControlInput2"
+                            <input type="text" id="user-msg-input" class="form-control form-control-lg" id="exampleFormControlInput2"
                               placeholder="Type message">
                             <a id="user-submit-msg" class="ms-3" href=""><i class="fas fa-paper-plane"></i></a>
                         </div>
